--- a/exercise4b/exercise4b/src/main/resources/static/anuncio_guardado.html
+++ b/exercise4b/exercise4b/src/main/resources/static/anuncio_guardado.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <p>El anuncio ha sido guardado correctamente</p>
-  <a href="/">Volver al tablón</a>
+  <a href="/">
+      <img src="/images/okay.jpg" height="233" width="216"/>
+  </a>
 </body>
 </html>
