BBDD some examples

--- a/Bloque I/exercise2/exercise2/src/main/resources/static/index.html
+++ b/Bloque I/exercise2/exercise2/src/main/resources/static/index.html
@@ -10,5 +10,7 @@
     <a href="/enlace?num=3">Enlace 3</a>
     <a href="/enlace?num=4">Enlace 4</a>
     <a href="/enlace?num=5">Enlace 5</a>
+
+    <a href="/enlace/6">Enlace 6</a>
 </body>
 </html>
